--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./sass/app.css">
+    <link rel="stylesheet" href="../sass/app.css">
     <title>Challenger</title>
 </head>
 
@@ -35,7 +35,7 @@
     </section>
     <section class="typing-section"></section>
     <section class="about-us"></section>
-    <script src="./javascript/scripts.js"></script>
+    <script src="../javascript/scripts.js"></script>
 </body>
 
 </html>
